# data-pipeline-qa-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  table_names.txt
chatbot-ui/: README.md  api.js  chat.js  index.html  renderers.js  style.css
docs/: aws-setup.md  frontend-contract.md
src/: __init__.py  cli.py  daemon.py  webapp.py
src/agent/: __init__.py  athena.py  embed.py  glue.py  graph.py  listener.py  llm.py  mocks.py  mongo.py  run_service.py  state.py
src/agent/nodes/: __init__.py  ask_context.py  extract_pipeline.py  generate_checks.py  identify_gaps.py  interpret_results.py  load_inputs.py  persist_run.py  profile_tables.py  retrieve_prior.py  run_queries.py  update_understanding.py  write_report.py
src/pipeline_qa_extractor/: __init__.py  cache.py  cli.py  cost.py  extractor.py  file_loader.py  hashing.py  models.py  openrouter_client.py  prompts.py  technology_templates.py
tests/: test_cache.py  test_cost.py  test_models.py  test_prompt_templates.py
